--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/equipe4.jpg" alt="image">
+                    <img src="assets/images/rodrigue.jpg" alt="image">
                 </div>
                 <div class="text">
                     <h3>Rodrigue</h3>
@@ -222,7 +222,7 @@
             </div>
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/equipe4.jpg" alt="image">
+                    <img src="assets/images/joseph.jpg" alt="image">
                 </div>
                 <div class="text">
                     <h3>Joseph</h3>
