--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="contenu">
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/t1.jpeg" alt="image">
+                    <img src="assets/images/profil2.jpg" alt="image">
                 </div>
                 <div class="text">
                     <p>
@@ -260,7 +260,7 @@
             </div>
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/t2.jpg " alt="image">
+                    <img src="assets/images/profil3.avif " alt="image">
                 </div>
                 <div class="text">
                     <p>
@@ -274,7 +274,7 @@
             </div>
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/t3.jpg" alt="image">
+                    <img src="assets/images/profil4.avif" alt="image">
                 </div>
                 <div class="text">
                     <p>
@@ -288,7 +288,7 @@
             </div>
             <div class="box">
                 <div class="imbox">
-                    <img src="assets/images/t4.jpg" alt="image">
+                    <img src="assets/images/profil1.jpg" alt="image">
                 </div>
                 <div class="text">
                     <p>
